Exercise/.metadata/.plugins/org.eclipse.cdt.ui/Ex_5.build.log
14:09:39 **** Incremental Build of configuration Debug for project Ex_5 ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103x6 -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc "../Core/Src/stm32f1xx_it.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103x6 -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/stm32f1xx_it.d" -MT"Core/Src/stm32f1xx_it.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/stm32f1xx_it.o"
arm-none-eabi-gcc "../Core/Src/syscalls.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103x6 -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/syscalls.d" -MT"Core/Src/syscalls.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/syscalls.o"
arm-none-eabi-gcc "../Core/Src/sysmem.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103x6 -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/sysmem.d" -MT"Core/Src/sysmem.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/sysmem.o"
arm-none-eabi-gcc "../Core/Src/system_stm32f1xx.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103x6 -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/system_stm32f1xx.d" -MT"Core/Src/system_stm32f1xx.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/system_stm32f1xx.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:212:13: error: invalid storage class for function 'MX_TIM2_Init'
  212 | static void MX_TIM2_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:257:13: error: invalid storage class for function 'MX_GPIO_Init'
  257 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:331:1: error: expected declaration or statement at end of input
  331 | }
      | ^
../Core/Src/main.c: At top level:
../Core/Src/main.c:51:13: warning: 'MX_TIM2_Init' used but never defined
   51 | static void MX_TIM2_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:52:13: warning: 'MX_GPIO_Init' used but never defined
   52 | static void MX_GPIO_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:322:6: warning: 'Error_Handler' defined but not used [-Wunused-function]
  322 | void Error_Handler(void)
      |      ^~~~~~~~~~~~~
../Core/Src/main.c:306:6: warning: 'HAL_TIM_PeriodElapsedCallback' defined but not used [-Wunused-function]
  306 | void HAL_TIM_PeriodElapsedCallback(TIM_HandleTypeDef *htim) {
      |      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:257:13: warning: 'MX_GPIO_Init' defined but not used [-Wunused-function]
  257 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:212:13: warning: 'MX_TIM2_Init' defined but not used [-Wunused-function]
  212 | static void MX_TIM2_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:176:6: warning: 'SystemClock_Config' defined but not used [-Wunused-function]
  176 | void SystemClock_Config(void)
      |      ^~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j16 all" terminated with exit code 2. Build might be incomplete.

14:09:39 Build Failed. 5 errors, 7 warnings. (took 532ms)

